@@ -16,9 +16,10 @@ $(dirname $0)/rules.uf.loopback.sh
 $(dirname $0)/rules.uf.drop.sh
 $(dirname $0)/rules.uf.server.ssh.sh
 $(dirname $0)/rules.uf.server.dhcp.sh
+$(dirname $0)/rules.uf.server.dns.sh
 $(dirname $0)/rules.uf.masquerade.sh
 
-
-
+$(dirname $0)/rules.uf.output.dns.sh
+$(dirname $0)/rules.uf.output.ntp.sh
 
 
