@@ -3,6 +3,7 @@
 ACTION=$1
 source $(dirname $0)/uf.config.sh
 source $(dirname $0)/uf.config.interfaces.sh
+echo -e "$ACT $(basename $0)"
 
 $iptables -A INPUT -j LOG-FIL-IN-DROP
 $iptables -A FORWARD -j LOG-FIL-FORWARD-DROP
