@@ -3,6 +3,7 @@
 ACTION=$1
 source $(dirname $0)/uf.config.sh
 source $(dirname $0)/uf.config.interfaces.sh
+echo -e "$ACT $(basename $0)"
 
 $iptables $ACTION_INPUT -i lo -j LOG-FIL-IN-ACCEPT
 $iptables $ACTION_INPUT -d 127.0.0.0/8 ! -i lo -j LOG-FIL-IN-DROP
