@@ -13,13 +13,11 @@ echo -e "$ACT $(basename $0)"
 #$iptables -I FORWARD 2 -m state --state RELATED,ESTABLISHED -j LOG-FIL-FORWARD-ACCEPT
 
 $iptables -t nat -N LOG-NAT-POST-MASQUERADE
-$iptables -t nat $ACTION_POSTROUTING -s 192.168.168.0/24 -o $out_int -j LOG-NAT-POST-MASQUERADE
-#iptables -t nat $ACTION_POSTROUTING -m iprange --src-range 192.168.168.10-192.168.168.30 -o $out_int -j LOG-NAT-POST-MASQUERADE
+$iptables -t nat $ACTION_POSTROUTING -s 10.10.10.0/24 -o wlan0 -j LOG-NAT-POST-MASQUERADE
 $iptables -t nat -A LOG-NAT-POST-MASQUERADE -j MASQUERADE
 
-$iptables $ACTION_FORWARD -s 192.168.168.0/24 -i $LAN -o $out_int -j LOG-FIL-FORWARD-ACCEPT
-#iptables $ACTION_FORWARD -m iprange --src-range 192.168.168.10-192.168.168.30 -i $LAN -o $out_int -j LOG-FIL-FORWARD-ACCEPT
-$iptables $ACTION_FORWARD -m state --state RELATED,ESTABLISHED -j LOG-FIL-FORWARD-ACCEPT
+$iptables $ACTION_FORWARD -s 10.10.10.0/24 -i br0 -o wlan0 -j LOG-FIL-FORWARD-ACCEPT
+$iptables -I FORWARD 2 -m state --state RELATED,ESTABLISHED -j LOG-FIL-FORWARD-ACCEPT
 
 #$iptables -t nat -A POSTROUTING  -s 192.168.168.0/24 -o wwan0 -j MASQUERADE
 #$iptables -A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
@@ -28,4 +26,3 @@ $iptables $ACTION_FORWARD -m state --state RELATED,ESTABLISHED -j LOG-FIL-FORWAR
 #iptables -t nat -A POSTROUTING  -s 192.168.168.0/24 -o eth0 -j MASQUERADE
 #iptables -A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
 #iptables -A FORWARD -i wlan0 -o eth0 -j ACCEPT
-
