@@ -1,12 +1,10 @@
-#!/ in/bash
-
 #Ugly-Firewall interfaces's config file
 
 ############################################
 # Interfaces 
 ############################################
-WAN=br0
-LAN=br0
+WAN=eth0
+LAN=bond0
 VPN=tun0
+in_int=bond0
 out_int=tun0
-in_int=br0
